--- a/ข้อ5/booking.html
+++ b/ข้อ5/booking.html
@@ -107,6 +107,7 @@
                               <option>€</option>
                               <option>฿</option>
                             </select>
+                        </span>
                     </div>
                 </div>
             </div>
